# viteo

./: .gitignore  README.md  example.py  pyproject.toml
src/native/include/: frame_extractor.h
src/native/src/: bindings.cpp  frame_extractor.mm
src/viteo/: __init__.py
tests/: test_viteo.py
videoextractor/: CMakeLists.txt  __init__.py  pyproject.toml
videoextractor/include/: frame_extractor.h
videoextractor/src/videoextractor/: bindings.cpp  frame_extractor.mm
viteo/: CMakeLists.txt  __init__.py  pyproject.toml
