[tool.poetry]
name = "altiv"
version = "0.1.0"
description = "Video processing with Apple hardware acceleration"
authors = ["Rémi Héneault <remi@heneault.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mlx = "*"
rich = "*"
numpy = "*"
videoextractor = {path = "videoextractor", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4"
setuptools = ">=80.8"
ipython = ">=9.5"
nanobind = ">=2.9"
scikit-build-core = ">=0.11"

