[build-system]
requires = ["scikit-build-core>=0.8.0", "nanobind>=2.9", "setuptools>=80.8"]
build-backend = "scikit_build_core.build"

[project]
name = "videoextractor"
version = "0.1.0"
requires-python = ">=3.13"

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build"
wheel.packages = ["."]
editable.rebuild = true
cmake.verbose = true
cmake.build-type = "Debug"

[tool.scikit-build.cmake.define]
CMAKE_OSX_ARCHITECTURES = "arm64"
