[build-system]
requires = ["scikit-build-core>=0.8.0", "nanobind>=2.9", "setuptools>=80.8"]
build-backend = "scikit_build_core.build"

[project]
name = "viteo"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "mlx"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build"
wheel.packages = ["."]
editable.rebuild = true
cmake.verbose = true
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_OSX_ARCHITECTURES = "arm64"

[tool.poetry.dependencies]
nanobind = "^2.9.2"
scikit-build-core = "^0.11.6"
